--- a/app/src/main/res/layout/fragment_system.xml
+++ b/app/src/main/res/layout/fragment_system.xml
@@ -161,6 +161,29 @@
                         android:layout_height="match_parent"
                         android:visibility="visible" />
 
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+                            android:id="@+id/stationsDots"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="8dp"
+                            app:dotsColor="@color/md_amber_400"
+                            app:dotsCornerRadius="8dp"
+                            app:dotsSize="16dp"
+                            app:dotsSpacing="4dp"
+                            app:dotsWidthFactor="2.5"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.498"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:progressMode="true"
+                            app:selectedDotColor="@color/md_amber_800" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
@@ -199,21 +222,35 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1" />
 
-                        <ImageView
-                            android:id="@+id/bodiesImg"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0"
-                            android:focusable="true"
-                            android:rotation="90"
-                            app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
-
                     </LinearLayout>
 
-                    <androidx.viewpager.widget.ViewPager
+                    <m.luigi.eliteboy.util.DynamicHeightViewPager
                         android:id="@+id/bodiesViewPager"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+                            android:id="@+id/bodiesDots"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="8dp"
+                            app:dotsColor="@color/md_amber_400"
+                            app:dotsCornerRadius="8dp"
+                            app:dotsSize="16dp"
+                            app:dotsSpacing="4dp"
+                            app:dotsWidthFactor="2.5"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.498"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:progressMode="true"
+                            app:selectedDotColor="@color/md_amber_800" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                 </LinearLayout>
 
