--- a/app/src/main/res/layout/system_information_item.xml
+++ b/app/src/main/res/layout/system_information_item.xml
@@ -22,5 +22,6 @@
         android:id="@+id/infoValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textAlignment="textEnd" />
 </LinearLayout>
