--- a/app/src/main/res/layout/system_information_item.xml
+++ b/app/src/main/res/layout/system_information_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <m.luigi.eliteboy.util.AutoScrollingTextView
+    <m.luigi.eliteboy.views.AutoScrollingTextView
         android:id="@+id/infoProperty"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
